# pulpmonad

./: .gitignore  README.md  build  build.sh  cabal.haskell-ci  cabal.project  cabal.project.freeze  cabal.project.local  hie.yaml  hook.sh  install  install.sh  profile.cfg  profile.yaml  pulpmonad.cabal  run.sh  xmonad-abcfg.cabal  xmonad.hook  xmonad.start
.github/workflows/: haskell-ci.yml
app/: Bar.hs  Defines.hs  Main.hs  StartHook.hs
bar/: Main.hs
cfg/: .gtkrc-2.0  .stalonetrayrc  .xmobar  gtk3-settings.ini  gtk4-settings.ini  settings.ini
common/: LICENSE  pulp-commons.cabal
common/src/: Defines.hs
common/test/: Spec.hs
desk/: CHANGELOG.md  pulpdesk.cabal
desk/bar/: Main.hs
desk/lib/Control/Concurrent/: Task.hs
desk/lib/Control/Event/: Entry.hs  State.hs
desk/lib/Data/: Validation.hs
desk/lib/Gtk/: Application.hs  Commons.hs  Containers.hs  ImageBar.hs  Pixbufs.hs  Reactive.hs  Singles.hs  Styles.hs  Task.hs  Window.hs
desk/lib/Parse/: ParseHor.hs
desk/lib/Pulp/Desk/: PulpBar.hs  PulpPath.hs
desk/lib/Pulp/Desk/Applet/: Clocks.hs  DesktopVisual.hs  Layout.hs  SysCtrl.hs  SysTray.hs  SystemDisplay.hs  Volume.hs  WMCtrl.hs
desk/lib/Pulp/Desk/Applet/DesktopVisual/: DesktopItemView.hs  DesktopVisual.hs  Handle.hs  WindowItemView.hs
desk/lib/Pulp/Desk/Applet/SysTray/: Handle.hs  SystemTrayView.hs  TrayItemView.hs
desk/lib/Pulp/Desk/Env/: PulpEnv.hs
desk/lib/Pulp/Desk/Reactive/: Entry.hs  State.hs  Task.hs
desk/lib/Pulp/Desk/System/: AppInfos.hs  AudioStatus.hs  HWStatus.hs
desk/lib/Pulp/Desk/System/Hardware/: BatteryStatus.hs  CPUStatus.hs  Commons.hs  DiskStatus.hs  MemoryStatus.hs
desk/lib/Pulp/Desk/System/X11/: WMStatus.hs  XHandle.hs  XListen.hs
desk/lib/Pulp/Desk/UI/: Application.hs  Commons.hs  Containers.hs  ImageBar.hs  Pixbufs.hs  Reactive.hs  Styles.hs  Task.hs  Window.hs
desk/lib/Pulp/Desk/UI/Widget/: ImageBar.hs
desk/lib/Pulp/Desk/Utils/: LogPrint.hs  ParseHor.hs
desk/lib/Status/: AppInfos.hs  AudioStatus.hs  HWStatus.hs
desk/lib/Status/X11/: WMStatus.hs  XHandle.hs  XListen.hs
desk/lib/System/Applet/: Clocks.hs  DesktopVisual.hs  Layout.hs  SysCtrl.hs  SysTray.hs  SystemDisplay.hs  Volume.hs  WMCtrl.hs
desk/lib/System/Applet/DesktopVisual/: DesktopItemView.hs  DesktopVisual.hs  Handle.hs  View.hs  WindowItemView.hs
desk/lib/System/Applet/SysTray/: Handle.hs  SystemTrayView.hs  TrayItemView.hs  View.hs
desk/lib/System/Log/: LogPrint.hs
desk/lib/System/Pulp/: PulpBar.hs  PulpEnv.hs  PulpPath.hs
desk/lib/System/Pulp/Applet/: Clocks.hs  DesktopVisual.hs  SysTray.hs  SystemDisplay.hs
desk/lib/System/Pulp/Applet/DesktopVisual/: Handle.hs  View.hs
desk/lib/System/Pulp/Applet/SysTray/: Handle.hs  View.hs
desk/lib/UI/: Application.hs  Commons.hs  Pixbufs.hs  Singles.hs  Task.hs
desk/lib/View/: Boxes.hs  Imagery.hs  Textual.hs
desk/src/: GtkCommons.hs  HWStatus.hs  Task.hs
desk/src/Control/Concurrent/: Task.hs
desk/src/Control/Env/: PulpEnv.hs
desk/src/Parse/: ParseHor.hs
desk/src/Status/: EWMHStatus.hs  HWStatus.hs  WMStatus.hs  XHandle.hs
desk/src/Status/X11/: WMStatus.hs  XHandle.hs
desk/src/System/Log/: LogPrint.hs
desk/src/System/Pulp/: PulpEnv.hs
desk/src/System/Pulp/Applet/: Clocks.hs  DesktopVisual.hs  SystemDisplay.hs
desk/src/System/Pulp/Applet/DesktopVisual/: Handle.hs  View.hs
desk/src/UI/: Application.hs  Commons.hs  Containers.hs  GtkCommons.hs  Singles.hs  Styles.hs  Task.hs  Window.hs
desk/src/UI/X11/: DesktopVisual.hs  Desktops.hs  Workspaces.hs
desk/src/UI/X11/DesktopVisual/: Handle.hs  View.hs
desk/src/View/: Imagery.hs  Textual.hs
desk/sysctl/: Main.hs
desk/taskbar/: Main.hs
desk/test/: Spec.hs
desk/test/Control/: ReactiveSpec.hs
desk/test/Control/Event/: EntrySpec.hs  StateSpec.hs
desk/test/Reactive/: EntrySpec.hs  StateSpec.hs
desk/test/Status/: HWSpec.hs
desk/test/System/: HWSpec.hs  HardwareSpec.hs
services/: pulp-taskbar.service  pulpmonad.service  status-notifier-watcher.service
src/: Defines.hs  GtkCommons.hs  Selects.hs  StartHook.hs
styles/: pulp-sysctl.css  pulp-taskbar.css  taffybar.css
ui/: battery.ui  clock.ui  desk-item.ui  image-bar.ui  layout.ui  mainboard.ui  sysctl.glade  sysctl.ui  volume.ui  window-item.ui  wmctl.ui
ui/desktop-visualizer/: desktop-item.ui  desktop-visualizer.ui  window-item.ui
ui/system-tray/: system-tray.ui  tray-item.ui
winman/: pulpmonad.cabal
winman/app/: Main.hs
winman/src/: Selects.hs  StartHook.hs  XEvents.hs
