cabal-version:      2.4
name:               pulpmonad
version:            0.1.0.2
synopsis:           Pulpmonad, xmonad config

-- A longer description of the package.
-- description:
homepage:           https://github.com/Abastro/pulpmonad
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
copyright:          2022 Abastro
extra-source-files:
    README.md

executable pulpmonad
  main-is:             Main.hs
  other-modules:
    Defines
    Bar
    StartHook
  default-extensions:
  build-depends:       
      base >=4.14 && <5
    , vector
    , containers
    , filepath
    , directory
    , X11
    , unix
    , xmonad >=0.13
    , xmonad-contrib >=0.14
    , haskell-gi ==0.26.*
    , gi-gtk ==3.*
    , gi-gdk ==3.*
    , gtk-strut >=0.1.4
    , taffybar ==3.4.*
    
  hs-source-dirs:      app
  default-language:    GHC2021
  ghc-options:  -W  -threaded +RTS -N -RTS
