cabal-version:      2.4
name:               pulpmonad
version:            0.1.2.0
synopsis:           Pulpmonad, xmonad config

-- A longer description of the package.
-- description:
homepage:           https://github.com/Abastro/pulpmonad
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
copyright:          2022 Abastro
extra-source-files:
    README.md

common pulp
  default-extensions:
    LambdaCase

  build-depends:
      base >=4.14 && <5
    , vector ==0.12.*
    , containers ==0.6.*
    , text ==1.2.*
    , filepath
    , directory
    , X11
    , unix
    , xmonad >=0.13
    , xmonad-contrib >=0.14

  default-language:    GHC2021
  ghc-options:         -W

common pulpexe
  import:              pulp
  ghc-options:         -threaded +RTS -N -RTS

library
  import:              pulp
  hs-source-dirs:      src
  exposed-modules:
    Defines
    StartHook
    Selects

executable pulpmonad
  import:              pulpexe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
  build-depends:
      pulpmonad

executable pulpbar
  import:              pulpexe
  hs-source-dirs:      bar
  main-is:             Main.hs
  other-modules:
  build-depends:
      pulpmonad
    , haskell-gi ==0.26.*
    , gi-gtk ==3.*
    , gi-gdk ==3.*
    , gtk-strut >=0.1.4
    , gtk-sni-tray ==0.1.*
    , taffybar ==3.4.*
