cabal-version:      2.4
name:               pulpmonad
version:            0.1.2.0
synopsis:           Pulpmonad, xmonad config

-- A longer description of the package.
-- description:
homepage:           https://github.com/Abastro/pulpmonad
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
copyright:          2022 Abastro
extra-source-files:
    README.md

common pulp
  default-extensions:
    LambdaCase

  build-depends:
      base >=4.14 && <5
    , vector ==0.12.*
    , containers ==0.6.*
    , mtl ==2.2.*
    , text ==1.2.*
    , filepath
    , directory
    , X11
    , unix
    , stm == 2.5.*
    , xmonad >=0.13
    , xmonad-contrib >=0.14
    , enclosed-exceptions ==1.0.*
    , broadcast-chan ==0.2.*
    , haskell-gi ==0.26.*
    , gi-gtk ==3.*
    , gi-gdk ==3.*
    , gi-gtk-hs ==0.3.*
    , gi-cairo-render ==0.1.*
    , gi-cairo-connector ==0.1.*

  default-language:    GHC2021
  ghc-options:         -W

common pulpexe
  import:              pulp
  ghc-options:         -threaded +RTS -N -RTS

library
  import:              pulp
  hs-source-dirs:      src
  exposed-modules:
    Defines
    StartHook
    Selects
    GtkCommons

executable pulpmonad
  import:              pulpexe
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:
  build-depends:
      pulpmonad

executable pulpbar
  import:              pulpexe
  hs-source-dirs:      bar
  main-is:             Main.hs
  other-modules:
  build-depends:
      pulpmonad
    , gtk-strut >=0.1.4
    , gtk-sni-tray ==0.1.*
    , taffybar ==3.4.*
