cabal-version:       >=1.10
-- Cabal documentation: http://haskell.org/cabal/users-guide/

name:                xmonad-abcfg
version:             0.1.0.0
-- synopsis:
description:         Abastro's xmonad config
-- bug-reports:
license:             AllRightsReserved
-- license-file:        LICENSE
author:              Abastro
maintainer:          abab9579@naver.com
-- copyright:
-- category:
build-type:          Simple

executable xmonad-abcfg
  main-is:             Main.hs
  other-modules:
  -- other-extensions:
  build-depends:       
      base >=4.14 && <4.15
    , containers
    , X11
    , xmonad >=0.13
    , xmonad-contrib >=0.14
    
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:  -W
