cabal-version:       >=1.10
-- Cabal documentation: http://haskell.org/cabal/users-guide/

name:                xmonad-abcfg
version:             0.1.0.0
description:         Abastro's xmonad config
license:             AllRightsReserved
author:              Abastro
maintainer:          abab9579@naver.com
-- copyright:
-- category:
build-type:          Simple

executable xmonad-abcfg
  main-is:             Main.hs
  other-modules:
  -- other-extensions:
  build-depends:       
      base >=4.14 && <5
    , containers
    , X11
    , xmonad >=0.13
    , xmonad-contrib >=0.14
    
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:  -W  -threaded +RTS -N -RTS

executable taffybar-abcfg
  main-is:             Main.hs
  other-modules:
  build-depends:
      base >=4.14 && <5
    , containers
    , taffybar >=3.3

  hs-source-dirs:      bar
  default-language:    Haskell2010
  ghc-options:  -W  -threaded +RTS -N -RTS
