cabal-version:       2.4
-- Cabal documentation: http://haskell.org/cabal/users-guide/

name:                xmonad-abcfg
version:             0.1.0.1
description:         Abastro's xmonad config
license:             NONE
author:              Abastro
maintainer:          abab9579@naver.com
-- copyright:
-- category:
build-type:          Simple

executable xmonad-abcfg
  main-is:             Main.hs
  other-modules:
  default-extensions:
    ImportQualifiedPost

  build-depends:       
      base >=4.14 && <5
    , containers
    , filepath
    , directory
    , X11
    , xmonad >=0.13
    , xmonad-contrib >=0.14
    
  hs-source-dirs:      app
  default-language:    Haskell2010
  ghc-options:  -W  -threaded +RTS -N -RTS

executable taffybar-abcfg
  main-is:             Main.hs
  other-modules:
  default-extensions:
    ImportQualifiedPost

  build-depends:
      base >=4.14 && <5
    , containers
    , filepath
    , directory
    , gi-gtk ==3.*
    , gi-gdk ==3.*
    , xmonad >=0.13
    , gtk-strut >=0.1.4
    , taffybar == 3.3.*

  hs-source-dirs:      bar
  default-language:    Haskell2010
  ghc-options:  -W  -threaded +RTS -N -RTS
