cabal-version:      2.4
name:               pulp-commons
version:            0.1.0.0
synopsis:           Common library for pulpmonad
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
copyright:          2022 Abastro

library
  hs-source-dirs:       src
  default-extensions:
    LambdaCase
  default-language:     GHC2021
  ghc-options:          -W
  build-depends:
      base >=4.14 && <5
    , vector
    , containers
    , mtl
    , text
    , filepath
    , directory
    , X11
    , unix
    , stm == 2.5.*
  exposed-modules:
    Defines

test-suite test-pulp-commons
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  default-extensions:
    LambdaCase
  default-language:     GHC2021
  build-depends:
      base
    , pulp-commons
    -- , process >= 1.6.14
    , QuickCheck >=2.14
    , hspec ^>=2.10
