cabal-version:      2.4
name:               pulpdesk
version:            0.1.1.0
synopsis:           Desktop UIs for pulpmonad
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
copyright:          2022 Abastro

tested-with: GHC ==9.2.5

flag test-hardware
  description:      Tests with hardware
  default:          False
  manual:           True

common pulp-gtk
  default-extensions:
    LambdaCase
    RecordWildCards
    DerivingStrategies
    DerivingVia
    NoFieldSelectors
    DuplicateRecordFields
    OverloadedRecordDot
  default-language:    GHC2021
  ghc-options:         -W
  build-depends:
      base >=4.16 && <5
    , vector
    , containers
    , transformers
    , mtl
    , bytestring
    , text
    , filepath
    , directory
    , X11
    , unix
    , time
    , async
    , process
    , generic-data ==0.9.*
    , stm ==2.5.*
    , parser-combinators ==1.3.*
    , megaparsec ==9.2.*
    , unliftio-core ==0.2.*
    , fast-logger ==3.1.*
    , data-default-class ^>=0.1.2
    , xmonad >=0.13
    , xmonad-contrib >=0.14
    , alsa-core ^>= 0.5.0.1
    , alsa-mixer ^>= 0.3.0
    , reactive-banana ^>= 1.3.2
    , haskell-gi-base ==0.26.*
    , gi-glib ==2.0.*
    , gi-gio >=2.0.29
    , gi-gtk ==3.*
    , gi-gdk ==3.*
    , gi-gdkpixbuf ==2.0.*
    , gi-gdkx11 ==3.*
    , gi-cairo ==1.0.*
    , gi-cairo-render ==0.1.*
    , gi-cairo-connector ==0.1.*
    , pulp-commons

library
  import:             pulp-gtk
  hs-source-dirs:     lib
  build-depends:
      dbus ^>=1.2
    , status-notifier-item ^>=0.3.1
    , gi-dbusmenugtk3 ==0.4.*

  exposed-modules:
    Data.Validation

    Pulp.Desk.Utils.ParseHor
    Pulp.Desk.Utils.LogPrint

    Pulp.Desk.PulpPath

    Pulp.Desk.Reactive.Task
    Pulp.Desk.Reactive.State
    Pulp.Desk.Reactive.Entry

    Pulp.Desk.UI.Pixbufs
    Pulp.Desk.UI.Styles
    Pulp.Desk.UI.Application
    Pulp.Desk.UI.Commons
    Pulp.Desk.UI.ImageBar
    Pulp.Desk.UI.Reactive
    Pulp.Desk.UI.Containers
    Pulp.Desk.UI.Task
    Pulp.Desk.UI.Window

    Pulp.Desk.System.X11.XListen
    Pulp.Desk.System.X11.XHandle
    Pulp.Desk.System.X11.WMStatus

    Pulp.Desk.System.AudioStatus
    Pulp.Desk.System.AppInfos
    Pulp.Desk.System.HWStatus

    Pulp.Desk.Env.PulpEnv

    Pulp.Desk.Applet.WMCtrl
    Pulp.Desk.Applet.Volume
    Pulp.Desk.Applet.Clocks
    Pulp.Desk.Applet.Layout
    Pulp.Desk.Applet.SystemDisplay
    Pulp.Desk.Applet.SysCtrl

    Pulp.Desk.Applet.DesktopVisual
    Pulp.Desk.Applet.DesktopVisual.WindowItemView
    Pulp.Desk.Applet.DesktopVisual.DesktopItemView
    Pulp.Desk.Applet.DesktopVisual.Handle
    Pulp.Desk.Applet.DesktopVisual.DesktopVisual

    Pulp.Desk.Applet.SysTray
    Pulp.Desk.Applet.SysTray.SystemTrayView
    Pulp.Desk.Applet.SysTray.Handle
    Pulp.Desk.Applet.SysTray.TrayItemView

    Pulp.Desk.PulpBar

test-suite test-pulpdesk
  import:             pulp-gtk
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
      pulpdesk
    , QuickCheck >=2.14
    , hspec ^>=2.10
  other-modules:
    Reactive.EntrySpec
    Reactive.StateSpec
    System.HWSpec

  if flag(test-hardware)
    cpp-options:    -DUSE_HARDWARE

executable pulp-taskbar
  import:             pulp-gtk
  main-is:            Main.hs
  hs-source-dirs:     taskbar
  ghc-options:        -threaded -rtsopts "-with-rtsopts=-N"
  build-depends:
      pulpdesk
