cabal-version:      2.4
name:               pulpdesk
version:            0.1.1.0
synopsis:           Desktop UIs for pulpmonad
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
copyright:          2022 Abastro

common pulp-gtk
  default-extensions:
    LambdaCase
    RecordWildCards
    DerivingStrategies
    DerivingVia
  default-language:    GHC2021
  ghc-options:         -W
  build-depends:
      base >=4.14 && <5
    , vector
    , containers
    , transformers
    , mtl
    , bytestring
    , text
    , filepath
    , directory
    , X11
    , unix
    , time
    , process
    , generic-data ^>=1.1
    , stm ==2.5.*
    , parser-combinators ==1.3.*
    , megaparsec ==9.2.*
    , unliftio-core ==0.2.*
    , fast-logger ==3.1.*
    , data-default-class ^>=0.1.2
    , xmonad >=0.13
    , xmonad-contrib >=0.14
    , alsa-core ^>= 0.5.0.1
    , alsa-mixer ^>= 0.3.0
    , reactive-banana ^>= 1.3
    , haskell-gi-base ==0.26.*
    , gi-glib ==2.0.*
    , gi-gobject == 2.0.*
    , gi-gio >=2.0.29
    , gi-gtk ==3.*
    , gi-gdk ==3.*
    , gi-gdkpixbuf ==2.0.*
    , gi-gdkx11 ==3.*
    , gi-cairo ==1.0.*
    , gi-cairo-render ==0.1.*
    , gi-cairo-connector ==0.1.*
    , pulp-commons

library
  import:             pulp-gtk
  hs-source-dirs:     lib
  build-depends:
      dbus ^>=1.2
    , status-notifier-item ^>=0.3.1
    , gi-dbusmenugtk3 ==0.4.*

  exposed-modules:
    Control.Concurrent.Task
    Control.Event.Entry
    Data.Validation
    Parse.ParseHor

    Status.HWStatus
    Status.X11.XHandle
    Status.X11.WMStatus
    Status.AppInfos
    Status.AudioStatus

    Gtk.Commons
    Gtk.Reactive
    Gtk.Task
    Gtk.Styles
    Gtk.Pixbufs
    Gtk.Containers
    Gtk.Window
    Gtk.Application
    Gtk.ImageBar

    System.Log.LogPrint

    System.Applet.Clocks
    System.Applet.SystemDisplay
    System.Applet.Layout
    System.Applet.SysCtrl
    System.Applet.WMCtrl
    System.Applet.Volume

    System.Applet.DesktopVisual.WindowItemView
    System.Applet.DesktopVisual.DesktopItemView
    System.Applet.DesktopVisual.DesktopVisual
    System.Applet.DesktopVisual.Handle
    System.Applet.DesktopVisual

    System.Applet.SysTray.TrayItemView
    System.Applet.SysTray.SystemTrayView
    System.Applet.SysTray.Handle
    System.Applet.SysTray

    System.Pulp.PulpPath
    System.Pulp.PulpEnv
    System.Pulp.PulpBar

test-suite test-pulpdesk
  import:             pulp-gtk
  type:               exitcode-stdio-1.0
  main-is:            Spec.hs
  hs-source-dirs:     test
  build-depends:
      pulpdesk
    , QuickCheck >=2.14
    , hspec ^>=2.10

executable pulp-taskbar
  import:             pulp-gtk
  main-is:            Main.hs
  hs-source-dirs:     taskbar
  ghc-options:        -threaded -rtsopts "-with-rtsopts=-N"
  build-depends:
      pulpdesk
