cabal-version:      2.4
name:               pulpmonad
version:            0.1.0.0
synopsis:           Pulpmonad - XMonad configuration
license:            BSD-3-Clause
license-file:       LICENSE
author:             Abastro
maintainer:         abab9579@gmail.com
copyright:          2022 Abastro

common pulp-xmonad
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PolyKinds
    PostfixOperators
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

    LambdaCase
  default-language:    Haskell2010
  ghc-options:         -W
  build-depends:
      base >=4.14 && <5
    , vector
    , containers
    , mtl
    , text
    , filepath
    , directory
    , X11
    , unix
    , stm == 2.5.*
    , xmonad >=0.13
    , xmonad-contrib >=0.14
    , pulp-commons

library
  import:             pulp-xmonad
  hs-source-dirs:     src
  exposed-modules:
    StartHook
    XEvents

executable pulpmonad
  import:             pulp-xmonad
  main-is:            Main.hs
  hs-source-dirs:     app
  ghc-options:         -threaded "-with-rtsopts=-N"
  build-depends:
    pulpmonad
